<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg"
    tools:context=".view.user.LoginActivity"
    >
  <RelativeLayout
      style="@style/personal_title_background"
      >

    <ImageView
        android:id="@+id/personal_back"
        style="@style/personal_back"

        />

    <TextView
        style="@style/personal_title"
        android:text="登录"
        />

  </RelativeLayout>

    <LinearLayout
        android:id="@+id/register_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        >
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:background="@color/white"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:textColorHint="@color/login_input_hint_color"
          >
        <AutoCompleteTextView
            android:id="@+id/login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:hint="@string/login_prompt_phone"
            android:textSize="@dimen/user_input_hint_text_size"
            android:maxLength="11"
            android:digits="@string/edittext_number"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/login_input_text_color"
            />
      </android.support.design.widget.TextInputLayout>
      <android.support.design.widget.TextInputLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="0.5dp"
          android:background="@color/white"
          android:paddingLeft="16dp"
          android:paddingRight="16dp"
          android:textColorHint="@color/login_input_hint_color"
          >
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:hint="@string/login_prompt_password"
            android:digits="@string/edittext_password"
            android:textSize="@dimen/user_input_hint_text_size"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/login_input_text_color"
            />
      </android.support.design.widget.TextInputLayout>
      <Button
          android:id="@+id/login_btn"
          android:layout_width="match_parent"
          android:layout_height="48dp"
          android:layout_gravity="center_horizontal"
          android:layout_marginLeft="@dimen/login_margin_l_r"
          android:layout_marginRight="@dimen/login_margin_l_r"
          android:layout_marginTop="@dimen/login_margin_t"
          android:background="@drawable/login_btn_selector"
          android:text="@string/login_action_sign_in_short"
          android:textAppearance="?android:attr/textAppearanceMedium"
          style="?android:attr/borderlessButtonStyle"
          />
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/login_margin_l_r"
          android:layout_marginRight="@dimen/login_margin_l_r"
          android:layout_marginTop="@dimen/login_margin_t"
          android:orientation="horizontal"
          >
        <TextView
            android:id="@+id/tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="还没帐号？"
            android:textColor="@color/login_tips_color"
            />
        <TextView
            android:id="@+id/login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/tips"
            android:textColor="@color/login_action_text_color"
            android:text="立即注册"
            />
        <TextView
            android:id="@+id/login_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_alignParentRight="true"
            android:textColor="@color/login_action_text_color"
            android:text="忘记密码？"
            />
      </RelativeLayout>
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/login_margin_l_r"
          android:layout_marginRight="@dimen/login_margin_l_r"
          android:layout_marginTop="@dimen/login_margin_t"
          android:gravity="center"
          >
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_centerInParent="true"
            android:background="@color/login_other_line"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/login_tips_color"
            android:background="@color/common_bg"
            android:layout_centerInParent="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="第三方帐号登录"
            />
      </RelativeLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="@dimen/login_margin_l_r"
          android:layout_marginRight="@dimen/login_margin_l_r"
          android:layout_marginTop="@dimen/login_margin_t"
          android:orientation="horizontal"
          >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >
          <ImageView
              android:id="@+id/login_qq"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/login_icon_qq_selector"
              />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >
          <ImageView
              android:id="@+id/login_wx"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/login_icon_wechat_selector"
              />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            >
          <ImageView
              android:id="@+id/login_wb"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@drawable/login_icon_weibo_selector"
              />
        </LinearLayout>
      </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
