<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg"
    tools:context=".view.user.RegisterActivity">
  <RelativeLayout
      style="@style/personal_title_background"
      >

    <ImageView
        android:id="@+id/personal_back"
        style="@style/personal_back"

        />

    <TextView
        style="@style/personal_title"
        android:text="注册"
        />

  </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
      <LinearLayout
          android:id="@+id/register_verify_form"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="80dp"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:orientation="vertical"
          android:visibility="visible"
          >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

          <android.support.design.widget.TextInputLayout
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@color/white"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:textColorHint="@color/login_input_hint_color"
              >
            <EditText
                android:id="@+id/register_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:drawablePadding="8dp"
                android:hint="请输入手机号"
                android:maxLength="11"
                android:textSize="@dimen/user_input_hint_text_size"
                android:digits="@string/edittext_number"
                android:inputType="phone"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/login_input_text_color"
                />
          </android.support.design.widget.TextInputLayout>

          <Button
              android:id="@+id/register_get_verify_code"
              android:layout_width="100dp"
              android:layout_height="match_parent"
              android:layout_gravity="center_vertical"
              android:layout_marginLeft="1dp"
              android:background="@color/white"
              android:text="@string/register_get_code"
              android:textAppearance="?android:attr/textAppearanceMedium"
              android:textColor="@color/register_get_code_text_color"
              style="?android:attr/borderlessButtonStyle"
              />
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/login_input_hint_color"
            >
          <EditText
              android:id="@+id/register_verify_code"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:drawablePadding="8dp"
              android:hint="请输入验证码"
              android:textSize="@dimen/user_input_hint_text_size"
              android:digits="@string/edittext_password"
              android:maxLines="1"
              android:singleLine="true"
              android:textColor="@color/login_input_text_color"
              />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_t"
            android:orientation="horizontal"
            >
          <TextView
              android:id="@+id/tips"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="@dimen/margin_l_r"
              android:text="点击下一步，表示您同意"
              android:textColor="@color/login_tips_color"
              />
          <TextView
              android:id="@+id/register_protocol"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_toRightOf="@id/tips"
              android:clickable="true"
              android:text="@string/register_protocol_title"
              android:textColor="@color/login_action_text_color"
              />
        </RelativeLayout>

        <Button
            android:id="@+id/register_next_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_margin_l_r"
            android:layout_marginRight="@dimen/login_margin_l_r"
            android:layout_marginTop="@dimen/login_margin_t"
            android:background="@drawable/login_btn_selector"
            android:text="@string/register_to_next"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="?android:attr/borderlessButtonStyle"
            />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/register_complete_form"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="80dp"
          android:focusable="true"
          android:focusableInTouchMode="true"
          android:orientation="vertical"
          android:visibility="gone"
          >
        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/register_set_head"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:scaleType="centerCrop"
            app:riv_oval="true"
            app:riv_tile_mode="clamp"
            android:layout_gravity="center"
            android:background="@mipmap/register_set_head_icon"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_t"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/login_input_hint_color"
            >
          <EditText
              android:id="@+id/register_nickname"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_gravity="center_vertical"
              android:drawablePadding="8dp"
              android:hint="昵称"
              android:textSize="@dimen/user_input_hint_text_size"
              android:inputType="text"
              android:maxLines="1"
              android:singleLine="true"
              android:textColor="@color/login_input_text_color"
              />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textColorHint="@color/login_input_hint_color"
            >
          <EditText
              android:id="@+id/register_password"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:drawablePadding="2dp"
              android:hint="密码"
              android:textSize="@dimen/user_input_hint_text_size"
              android:inputType="textPassword"
              android:maxLines="1"
              android:singleLine="true"
              android:textColor="@color/login_input_text_color"
              />
        </android.support.design.widget.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_t"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/login_margin_l_r"
            android:layout_marginRight="@dimen/login_margin_l_r"
            >
          <CheckBox
              android:id="@+id/register_checkbox"
              android:layout_width="24dp"
              android:layout_height="24dp"
              android:button="@drawable/register_icon_checkbox"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_centerVertical="true"
              android:layout_marginLeft="8dp"
              android:layout_toRightOf="@id/register_checkbox"
              android:text="显示密码"
              android:textColor="@color/login_tips_color"
              />
        </RelativeLayout>

        <Button
            android:id="@+id/register_complete_btn"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_margin_l_r"
            android:layout_marginRight="@dimen/login_margin_l_r"
            android:layout_marginTop="@dimen/login_margin_t"
            android:background="@drawable/login_btn_selector"
            android:text="完成注册"
            android:textAppearance="?android:attr/textAppearanceMedium"
            style="?android:attr/borderlessButtonStyle"
            />
      </LinearLayout>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
